crates/test-ui/ui/define_class_mut_self_not_mutable.stderr
error[E0277]: the trait bound `&mut CustomObject: MessageReceiver` is not satisfied
 --> ui/define_class_mut_self_not_mutable.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | | ^
  | | |
  | |_the trait `MessageReceiver` is not implemented for `&mut CustomObject`
  |   required by a bound introduced by this call
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: `MessageReceiver` is implemented for `&CustomObject`, but not for `&mut CustomObject`
  = note: required for `extern "C-unwind" fn(&mut CustomObject, objc2::runtime::Sel) -> &mut CustomObject` to implement `MethodImplementation`
note: required by a bound in `objc2::__macros::ClassBuilderHelper::<T>::add_method`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/checks.rs
  |
  |     pub unsafe fn add_method<F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
  |     where
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilderHelper::<T>::add_method`
  = note: this error originates in the macro `$crate::__define_class_register_out` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&mut CustomObject: MessageReceiver` is not satisfied
 --> ui/define_class_mut_self_not_mutable.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | | ^
  | | |
  | |_the trait `MessageReceiver` is not implemented for `&mut CustomObject`
  |   required by a bound introduced by this call
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: `MessageReceiver` is implemented for `&CustomObject`, but not for `&mut CustomObject`
  = note: required for `extern "C-unwind" fn(&mut CustomObject, objc2::runtime::Sel)` to implement `MethodImplementation`
note: required by a bound in `objc2::__macros::ClassBuilderHelper::<T>::add_method`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/checks.rs
  |
  |     pub unsafe fn add_method<F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
  |     where
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilderHelper::<T>::add_method`
  = note: this error originates in the macro `$crate::__define_class_register_out` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&mut CustomObject: MessageReceiver` is not satisfied
 --> ui/define_class_mut_self_not_mutable.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | | ^
  | | |
  | |_the trait `MessageReceiver` is not implemented for `&mut CustomObject`
  |   required by a bound introduced by this call
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: `MessageReceiver` is implemented for `&CustomObject`, but not for `&mut CustomObject`
  = note: required for `extern "C-unwind" fn(&mut CustomObject, objc2::runtime::Sel) -> objc2::__macros::RetainedReturnValue` to implement `MethodImplementation`
note: required by a bound in `objc2::__macros::ClassBuilderHelper::<T>::add_method`
 --> $WORKSPACE/crates/objc2/src/__macros/define_class/checks.rs
  |
  |     pub unsafe fn add_method<F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
  |     where
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilderHelper::<T>::add_method`
  = note: this error originates in the macro `$crate::__define_class_register_out` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&mut CustomObject: MessageReceiver` is not satisfied
 --> ui/define_class_mut_self_not_mutable.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     struct CustomObject;
... |
  | | );
  | |_^ the trait `MessageReceiver` is not implemented for `&mut CustomObject`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: `MessageReceiver` is implemented for `&CustomObject`, but not for `&mut CustomObject`
  = note: required for `objc2::__macros::MethodFamily<6>` to implement `objc2::__macros::MessageReceiveRetained<&mut CustomObject, Retained<CustomObject>>`
  = note: this error originates in the macro `$crate::__define_class_method_out_inner` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)
